--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "react-sweet-progress": "^1.1.2",
+    "react-tooltip": "^4.0.3",
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
