--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-tooltip": "^4.0.3",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sqlite3": "^4.1.1"
   },
