--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "firebase": "^7.9.1",
+    "pure-react-carousel": "^1.25.2",
     "react": "^16.12.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.3.0",
     "react-sweet-progress": "^1.1.2",
     "react-tooltip": "^4.0.3",
