--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
     "style-loader": "^1.1.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
